# pystatsfinance

./: CHANGELOG.md  FIRST_FEATURES.md  README.md  ROADMAP.md  pyproject.toml
pystatsfinance/: __init__.py
pystatsfinance/performance/: __init__.py  _common.py  _metrics.py
tests/: test_smoke.py
tests/performance/: test_metrics.py
