[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pystatsfinance"
version = "0.0.1"
description = "Financial and quantitative statistical computing for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Hai-Shuo", email = "contact@sgcx.org" },
]
keywords = [
    "finance",
    "quantitative-finance",
    "risk",
    "value-at-risk",
    "statistics",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://sgcx.org/technology/pystatsfinance/"
Documentation = "https://sgcx.org/docs/pystatsfinance/"
Repository = "https://github.com/sgcx-org/pystatsfinance"
Issues = "https://github.com/sgcx-org/pystatsfinance/issues"

[tool.hatch.build.targets.wheel]
packages = ["pystatsfinance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
strict = true
